@@ -5,7 +5,7 @@ INCLUDES = $(GTK_CFLAGS)
 CFLAGS = $(GTK_CFLAGS) -DG_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED \
 -DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED
 
-enginedir = $(libdir)/gtk-2.0/$(GTK2_VERSION)/engines
+enginedir = $(libdir)/gtk-2.0/$(GTK_BINARY_VERSION)/engines
 
 engine_LTLIBRARIES = libgalaxy.la
 
