@@ -1,2 +1,4 @@
 SUBDIRS= Gorilla Nuvola Lush Galaxy BlueSphere po
-EXTRA_DIST = intltool-extract.in  intltool-merge.in  intltool-update.in
+EXTRA_DIST = \
+	gnome-themes-extras.spec gnome-themes-extras.spec.in \
+	intltool-extract.in  intltool-merge.in  intltool-update.in
