@@ -1,0 +1,36 @@
+Summary: Additional themes collection for GNOME
+Name: gnome-themes-extras
+Version: @VERSION@
+Release: 0
+License: GPL
+Group: User Interface/Desktop
+Source: %{name}-%{version}.tar.gz
+BuildRoot: %{_tmppath}/%{name}-%{version}-root
+
+%description
+Additional themes collection for GNOME
+
+%prep
+%setup
+
+%build
+%configure
+make
+
+%install
+rm -rf ${RPM_BUILD_ROOT}
+%makeinstall
+
+%clean
+rm -rf ${RPM_BUILD_ROOT}
+
+%files
+%defattr(-, root, root)
+%{_libdir}/gtk-2.0/2.2.0/engines/*.so*
+%{_datadir}/icons/*
+%{_datadir}/themes/*
+%doc AUTHORS ChangeLog COPYING README
+
+%changelog
+* Wed Apr 02 2003 Yanko Kaneti <yaneti@declera.com>
+- First spec
